software. The information may not be entirely complete or accurate and is 
just used as a way to help describe the changes as we progress versions.

Upcoming Changes
-------------
[ADDED]   Added the ability to add names to the reports
[CHANGED] Changed look and feel of form / buttons to be more uniform across the appication.
[FIXED]   The ability to save user profiles

Version 1.4.3
----------------------
[FIXED]   issue cost delta would not include parts and labor cost per page (display only)
[REMOVED] part types from toners. Toner vendors are now used instead.


Version 1.4.2
---------------------------------
[ADDED]   the ability to export replacement devices to a quote
[FIXED]   issue where the quote menu would not show up
[FIXED]   issue where pages were taken into account when calculating the monthly lease price

Version 1.4.1
-------------
[FIXED]   issue with hardware optimization settings not saving correctly

Version 1.4.0
-------------

[ADDED]   a new settings management interface
[ADDED]   a new look and feel
[ADDED]   ability to handle managed and un-managed devices from an upload
[ADDED]   ability for dealers to manage device swap reasons
[ADDED]   cost analysis report
[ADDED]   dealer support for reports
[ADDED]   device swaps for hardware optimization
[ADDED]   integration with hardware optimization
[ADDED]   single sign-on access for all components
[ADDED]   support for management of other users part of your organization
[ADDED]   the forgot password system
[ADDED]   the health check report
[CHANGED] assessments, hardware optimization, hardware quotes and health checks
[CHANGED] hardware optimization to use ajax for a better ux
[CHANGED] how toner pricing imports handle finding a toner
[CHANGED] more settings now have the ability to handle 0 as a value
[CHANGED] order of settings fields to be more uniform
[CHANGED] service cost per page to a combination of parts and labor
[CHANGED] user names to be email addresses