@@ -371,6 +371,9 @@ if ($this->hardwareConfigurations)
         </div>
     </div>
 </div>
+<div id="loadingDiv" class="modal hide" style="height:130px;background-color: rgb(255,255,255);">
+    <div class="spinner64"></div>
+</div>
 </div>
 </div>
 <div style="text-align: center">
