@@ -8,6 +8,7 @@ Upcoming Changes
 -------------
 [ADDED]   Added the ability to add names to the reports
 [CHANGED] Changed look and feel of form / buttons to be more uniform across the appication.
+[CHANGED] Mapping no longer closes modal after saving.
 [FIXED]   The ability to save user profiles
 
 Version 1.4.3
